Fix inputs on mobile, change up faq cards

--- a/src/styles/containers/pages/CommandsPage.m.scss
+++ b/src/styles/containers/pages/CommandsPage.m.scss
@@ -108,7 +108,7 @@
                 margin: 5px 0;
                 padding: 10px 25px;
 
-                transition: background-color 0.125 ease-in-out, color 0.125s ease-in-out;
+                transition: background-color 0.125s ease-in-out, color 0.125s ease-in-out;
 
                 .command-header {
                     display: flex;
@@ -188,7 +188,7 @@
                     flex-flow: column nowrap;
                     padding: 5px 25px;
 
-                    transition: background-color 0.125 ease-in-out, color 0.125s ease-in-out;
+                    transition: background-color 0.125s ease-in-out, color 0.125s ease-in-out;
 
                     .command-header {
                         display: flex;
